Added Image/Installer Downloads

--- a/module.css
+++ b/module.css
@@ -14,3 +14,29 @@
 .right {
     float: right;
 }
+
+.left {
+    float: left;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+}
+
+.service-list {
+list-style-type: none;
+margin-left:0px;
+padding-left:0px;
+display: inline-block;
+}
+
+.service-list img
+{
+float:left;
+}
+
+.service-list p,h3 {
+text-align: right; 
+display:inline-block;
+padding: 0;
+}
